# devops-merge-styles

./: app.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
calculator/: __init__.py  advanced.py  logic.py
tests/: test_advanced.py  test_calculator.py
